plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
}

android {
    compileSdk 34

    defaultConfig {
        applicationId "com.drdisagree.iconify"
        minSdk 31
        targetSdk 34
        versionCode 13
        versionName "6.4.0"
        setProperty("archivesBaseName", "Iconify v" + versionName)
        buildConfigField "int", "MIN_SDK_VERSION", "$minSdkVersion.apiLevel"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    final def keystorePropertiesFile = rootProject.file("keystore.properties")
    def releaseSigning = signingConfigs.debug
    if (keystorePropertiesFile.exists()) {
        final def keystoreProperties = new Properties()
        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
        releaseSigning = signingConfigs.create("release") {
            keyAlias keystoreProperties['keyAlias']
            keyPassword keystoreProperties['keyPassword']
            storeFile rootProject.file(keystoreProperties['storeFile'])
            storePassword keystoreProperties['storePassword']
        }
    }

    buildTypes {
        debug {
            minifyEnabled true
            shrinkResources false
            zipAlignEnabled true
            crunchPngs true
            proguardFiles "proguard-android-optimize.txt", "proguard.pro", "proguard-rules.pro"
            applicationIdSuffix ".debug"
            resValue("string", "derived_app_name", "Iconify (Debug)")
            signingConfig releaseSigning
        }

        release {
            minifyEnabled true
            shrinkResources true
            zipAlignEnabled true
            crunchPngs true
            proguardFiles "proguard-android-optimize.txt", "proguard.pro", "proguard-rules.pro"
            resValue("string", "derived_app_name", "Iconify")
            signingConfig releaseSigning
        }
    }

    buildFeatures {
        viewBinding true
        dataBinding true
        buildConfig true
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    kotlinOptions {
        jvmTarget = '1.8'
    }

    packagingOptions {
        jniLibs.useLegacyPackaging true
        exclude '/META-INF/*'
        exclude '/META-INF/versions/**'
        exclude '/org/bouncycastle/**'
        exclude '/kotlin/**'
        exclude '/kotlinx/**'
        exclude 'rebel.xml'
        exclude '/*.txt'
        exclude '/*.bin'
        exclude '/*.json'
    }

    namespace 'com.drdisagree.iconify'
    lint {
        abortOnError false
        checkReleaseBuilds false
    }
}

dependencies {
    implementation 'androidx.core:core-ktx:1.10.1'

    // Magisk libsu version
    def libsuVersion = '5.1.0'

    // Xposed API
    compileOnly files('lib/api-82.jar')
    compileOnly files('lib/api-82-sources.jar')

    // The core module that provides APIs to a shell
    implementation "com.github.topjohnwu.libsu:core:${libsuVersion}"
    // Optional: APIs for creating root services. Depends on ":core"
    implementation "com.github.topjohnwu.libsu:service:${libsuVersion}"
    // Optional: Provides remote file system support
    implementation "com.github.topjohnwu.libsu:nio:${libsuVersion}"

    // Color Picker
    implementation 'com.github.PolideaInternal:ColorPicker:1.0.0'

    // Splash Screen
    implementation 'androidx.core:core-splashscreen:1.0.1'

    // Material Components
    implementation 'com.google.android.material:material:1.9.0'

    // APK Signer
    implementation 'org.bouncycastle:bc-fips:1.0.2.3'
    implementation 'org.bouncycastle:bcpkix-fips:1.0.7'

    // Zip Util
    implementation 'org.zeroturnaround:zt-zip:1.15'

    // Remote Preference
    implementation 'com.crossbowffs.remotepreferences:remotepreferences:0.8'

    // Flexbox
    implementation 'com.google.android.flexbox:flexbox:3.0.0'

    // Glide
    implementation 'com.github.bumptech.glide:glide:4.15.1'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'

    // RecyclerView
    implementation "androidx.recyclerview:recyclerview:1.3.0"
    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"

    // ViewPager2
    implementation "androidx.viewpager2:viewpager2:1.0.0"

    // Circle Indicator
    implementation 'me.relex:circleindicator:2.1.6'

    // Lottie Animation
    implementation 'com.airbnb.android:lottie:6.0.1'

    // HTML Parser
    implementation 'org.jsoup:jsoup:1.16.1'

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.work:work-runtime:2.8.1'
    implementation 'androidx.work:work-runtime-ktx:2.8.1'
    implementation 'org.slf4j:slf4j-api:2.0.7'

    // Test Implementation
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
}

task printVersionName {
    println android.defaultConfig.versionName.replaceAll("-(Stable|Beta)", "")
}
